--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,4 +12,12 @@
         android:layout_gravity="center_horizontal"
         android:onClick="joinGame"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/text_view_tank_id"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
