--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,20 +4,23 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_join_game"
-        android:id="@+id/button_join_game"
-        android:layout_gravity="center_horizontal"
-        android:onClick="joinGame"
-        />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/text_view_tank_id"
-        android:layout_gravity="center_horizontal" />
+        android:text="@string/welcome_text_view"
+        android:id="@+id/welcome_text_view"
+        android:layout_gravity="center_horizontal"
+        android:singleLine="false"
+        android:textSize="30dp"
+        android:textIsSelectable="false" />
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/button_join_game"
+            android:id="@+id/button_join_game"
+            android:onClick="joinGame"
+            />
 </LinearLayout>
