--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -50,12 +50,12 @@
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
             android:layout_width="fill_parent"
-            android:layout_height="305dp"
-            android:columnWidth="45dp"
+            android:layout_height="match_parent"
+            android:columnWidth="10dp"
             android:numColumns="16"
             android:verticalSpacing="1dp"
             android:horizontalSpacing="10dp"
-            android:stretchMode="spacingWidth"
+            android:stretchMode="columnWidth"
             android:gravity="bottom"
             />
 
